--- a/.github/workflows/merge_action.yml
+++ b/.github/workflows/merge_action.yml
@@ -1,4 +1,4 @@
-name: Promotion dev1->prod1 Slack notification Test
+name: Test of script
 on:
   pull_request_target:
     types:
@@ -8,21 +8,11 @@ on:
 
 jobs:
   promoted_to_prod:
-    if: |
-      (
-      github.event.pull_request.merged == true &&
-      contains(github.event.pull_request.labels.*.name, 'promote') &&
-      contains(github.event.pull_request.labels.*.name, 'dev1→prod1')
-      )
     runs-on: ubuntu-latest
     steps:
-    - name: PR merged to Prod
+    - name: Commit
       run: |
-        echo The PR was merged: ${{ github.event.pull_request.title }}"
-    - name: Format PR body
-      run: |
-        ./format.sh
-      shell: bash
+        echo The PR was merged: ${{ github.event.pull_request.title }}
     - name: Slack Notification
       uses: rtCamp/action-slack-notify@v2
       env:
