--- a/.github/workflows/merge_action.yml
+++ b/.github/workflows/merge_action.yml
@@ -1,8 +1,6 @@
-name: Promotion dev1->prod1 Slack notification
+name: Test of script
 on:
-  pull_request_target:
-    types:
-      - closed
+  push:
     branches:
       - 'main'
 
@@ -10,9 +8,9 @@ jobs:
   promoted_to_prod:
     runs-on: ubuntu-latest
     steps:
-    - name: PR merged to Prod
+    - name: Commit
       run: |
-        echo The PR was merged: ${{ github.event.pull_request.title }}"
+        echo The PR was merged: ${{ github.event.pull_request.title }}
     - name: Slack Notification
       uses: rtCamp/action-slack-notify@v2
       env:
