--- a/.github/workflows/merge_action.yml
+++ b/.github/workflows/merge_action.yml
@@ -14,6 +14,8 @@ jobs:
     - name: Checkout source code
       uses: actions/checkout@v3
     - name: Run script
+      env:
+        pr_body: ${{ github.event.pull_request.body}}
       run: |
         ./format.sh
       shell: bash
