--- a/.github/workflows/merge_action.yml
+++ b/.github/workflows/merge_action.yml
@@ -4,7 +4,7 @@ on:
     types:
       - closed
     branches:
-      - 'main'
+      - main
 
 env:
   PR_BODY: ${{ github.event.pull_request.body}}
