--- a/.github/workflows/merge_action.yml
+++ b/.github/workflows/merge_action.yml
@@ -8,7 +8,6 @@ on:
 
 env:
   PR_BODY: ${{ github.event.pull_request.body}}
-  FORMATTED_BODY: ""
   MSG: "-HOLA-"
 
 jobs:
@@ -25,6 +24,8 @@ jobs:
     - name: Checkout source code
       uses: actions/checkout@v3
     - name: Run script
+    env:   
+      FORMATTED_BODY: ""
       run: |
         echo "***** $PR_BODY ***** $MSG"
         ./format.sh
