--- a/.github/workflows/merge_action.yml
+++ b/.github/workflows/merge_action.yml
@@ -16,7 +16,7 @@ jobs:
       (
       github.event.pull_request.merged == true
       )
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
     - name: Log step
       run: |
