--- a/.github/workflows/merge_action.yml
+++ b/.github/workflows/merge_action.yml
@@ -27,15 +27,16 @@ jobs:
     - name: Run script
       run: |
         echo "***** $PR_BODY ***** $MSG"
-        ./format.sh
+        python3 save_formated_pr_body.py "$PR_BODY">> result.txt
         echo "::set-output name=PR_FORMATTED_BODY::$(cat ./result.txt)"
-        echo env.PR_FORMATTED_BODY
+        echo ${{ env.PR_FORMATTED_BODY }}
       shell: bash
     - name: Slack Notification
       uses: rtCamp/action-slack-notify@v2
       env:
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
         SLACK_CHANNEL: githubchangelog
-        SLACK_TITLE: ${{ github.event.pull_request.title}}
+        SLACK_TITLE: ${{ github.event.pull_request.title }}
         SLACK_MESSAGE: |
-          ${{ env.PR_FORMATTED_BODY}}
+          AQUI VOY
+          ${{ env.PR_FORMATTED_BODY }}
