--- a/.github/workflows/merge_action.yml
+++ b/.github/workflows/merge_action.yml
@@ -1,14 +1,13 @@
-name: Test of script
+name: Promotion dev1->prod1 Slack notification
 on:
   pull_request_target:
     types:
       - closed
     branches:
       - main
-
 env:
   PR_BODY: ${{ github.event.pull_request.body}}
-  PR_FORMATTED_BODY: ""
+  PR_FORMATTED_BODY: ${{ github.event.pull_request.title }}
 
 jobs:
   promoted_to_prod:
@@ -32,12 +31,3 @@ jobs:
       run: |
         echo *** ${{ github.event.pull_request.title }} ***
         echo ${{ env.PR_FORMATTED_BODY }}
-    - name: Slack Notification
-      uses: rtCamp/action-slack-notify@v2
-      env:
-        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-        SLACK_CHANNEL: githubchangelog
-        SLACK_TITLE: ${{ github.event.pull_request.title }}
-        SLACK_MESSAGE: |
-          AQUI VOY
-          ${{ env.PR_FORMATTED_BODY }}
