--- a/.github/workflows/merge_action.yml
+++ b/.github/workflows/merge_action.yml
@@ -5,10 +5,6 @@ on:
       - closed
     branches:
       - main
-env:
-  PR_BODY: ${{ github.event.pull_request.body}}
-  PR_FORMATTED_BODY: ${{ github.event.pull_request.title }}
-
 jobs:
   promoted_to_prod:
     if: |
@@ -16,15 +12,20 @@ jobs:
       github.event.pull_request.merged == true
       )
     runs-on: ubuntu-latest
+    env:
+      PR_BODY: ${{ github.event.pull_request.body}}
     steps:
     - name: Log step
       run: |
         echo "New promotion: ${{ github.event.pull_request.title }}"
     - name: Checkout source code
       uses: actions/checkout@v3
+      # with:
+      #   repository: NomadHealth/qa
+      #   ref: Master
     - name: Run script
       run: |
-        python3 save_formated_pr_body.py "$PR_BODY">> result.txt
+        python3 save_formated_pr_body.py "$PR_BODY"> result.txt
         echo "::set-output name=PR_FORMATTED_BODY::$(cat ./result.txt)"
       shell: bash
     - name: Print results
