--- a/.github/workflows/merge_action.yml
+++ b/.github/workflows/merge_action.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       PR_BODY: ${{ github.event.pull_request.body}}
+      PR_FORMATTED_BODY: ""
     steps:
     - name: Log step
       run: |
@@ -30,5 +31,5 @@ jobs:
       shell: bash
     - name: Print results
       run: |
+        echo "--- $PR_FORMATTED_BODY ---"
         echo "*** ${{ github.event.pull_request.title }} ***"
-        echo "$PR_FORMATTED_BODY"
