--- a/.github/workflows/merge_action.yml
+++ b/.github/workflows/merge_action.yml
@@ -25,11 +25,13 @@ jobs:
       #   repository: NomadHealth/nomad-env
       #   ref: Master
     - name: Run script
+      id: run_script
       run: |
         python3 save_formated_pr_body.py "$PR_BODY"> result.txt
         echo "::set-output name=PR_FORMATTED_BODY::$(cat ./result.txt)"
       shell: bash
     - name: Print results
       run: |
-        echo "--- $PR_FORMATTED_BODY ---"
-        echo "*** ${{ github.event.pull_request.title }} ***"
+        echo "steps.run_script.outputs.PR_FORMATTED_BODY: ${{ steps.run_script.outputs.PR_FORMATTED_BODY }}"
+        echo "PR_FORMATTED_BODY: $PR_FORMATTED_BODY"
+        echo "TITLE: ${{ github.event.pull_request.title }}"
