--- a/.github/workflows/merge_action.yml
+++ b/.github/workflows/merge_action.yml
@@ -23,12 +23,15 @@ jobs:
       # with:
       #   repository: NomadHealth/nomad-env
       #   ref: Master
+      #  echo "::set-output name=PR_FORMATTED_BODY::$(cat ./result.txt)"
+      # echo "${{ steps.run_script.outputs.PR_FORMATTED_BODY }}"
     - name: Run script
       id: run_script
+      working-directory: ./      
       run: |
         python3 save_formated_pr_body.py "$PR_BODY"> result.txt
-        echo "::set-output name=PR_FORMATTED_BODY::$(cat ./result.txt)"
+        echo "PR_FORMATTED_BODY=$(cat ./result.txt)" >> $GITHUB_ENV
       shell: bash
     - name: Print results
       run: |
-        echo "${{ steps.run_script.outputs.PR_FORMATTED_BODY }}"
+        echo "PREFORMATTED: env.PR_FORMATTED_BODY"
