--- a/.github/workflows/merge_action.yml
+++ b/.github/workflows/merge_action.yml
@@ -25,9 +25,9 @@ jobs:
       #   ref: Master
       #  echo "::set-output name=PR_FORMATTED_BODY::$(cat ./result.txt)"
       # echo "${{ steps.run_script.outputs.PR_FORMATTED_BODY }}"
+      # working-directory: ./
     - name: Run script
       id: run_script
-      working-directory: ./      
       run: |
         python3 save_formated_pr_body.py "$PR_BODY"> result.txt
         echo "PR_FORMATTED_BODY=$(cat ./result.txt)" >> $GITHUB_ENV
