--- a/.github/workflows/merge_action.yml
+++ b/.github/workflows/merge_action.yml
@@ -28,7 +28,7 @@ jobs:
       working-directory: ./
       run: |
         python3 save_formated_pr_body.py "${{ github.event.pull_request.body}}"> result.txt
-        PR_FORMATTED_BODY::$(cat ./result.txt)
+        PR_FORMATTED_BODY=$(cat ./result.txt)
         echo "PR_FORMATTED_BODY<<EOF" >> $GITHUB_ENV
         echo "$PR_FORMATTED_BODY" >> $GITHUB_ENV
         echo "EOF" >> $GITHUB_ENV        
