--- a/.github/workflows/merge_action.yml
+++ b/.github/workflows/merge_action.yml
@@ -36,3 +36,11 @@ jobs:
     - name: Print results
       run: |
         echo "${{ env.PR_FORMATTED_BODY }}"
+    - name: Slack Notification
+      uses: rtCamp/action-slack-notify@v2
+      env:
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+        SLACK_CHANNEL: githubchangelog
+        SLACK_TITLE: ${{ github.event.pull_request.title}}
+        SLACK_MESSAGE: |
+          ${{ env.PR_FORMATTED_BODY }}
