--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Checkout source code
       uses: actions/checkout@v3
     - name: Run script
-      working-directory: ./changelog
+      working-directory: changelog
       # Multiline strings tip from: https://trstringer.com/github-actions-multiline-strings/
       run: |
         python3 save_formated_pr_body.py "${{ github.event.pull_request.body }}"> result.txt
