--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -20,10 +20,10 @@ jobs:
       uses: actions/checkout@v3
     - name: PR Format body
       working-directory: .github/workflows/changelog/
-      # Multiline strings tip from: https://trstringer.com/github-actions-multiline-strings/
+      # Multiline strings from: https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions
       run: |
         python3 save_formated_pr_body.py "${{ github.event.pull_request.body }}"> result.txt
-        PR_FORMATTED_BODY=$(cat ./result.txt)
+        PR_FORMATTED_BODY=$(cat result.txt)
         echo "PR_FORMATTED_BODY<<EOF" >> $GITHUB_ENV
         echo "$PR_FORMATTED_BODY" >> $GITHUB_ENV
         echo "EOF" >> $GITHUB_ENV        
