--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -24,10 +24,10 @@ jobs:
       run: |
         python3 save_formated_pr_body.py '${{ github.event.pull_request.body }}'> result.txt
         PR_FORMATTED_BODY=$(cat result.txt)
-        echo 'PR_FORMATTED_BODY<<EOF' >> $GITHUB_ENV
-        echo '$PR_FORMATTED_BODY' >> $GITHUB_ENV
-        echo '' >> $GITHUB_ENV
-        echo 'EOF' >> $GITHUB_ENV        
+        echo "PR_FORMATTED_BODY<<EOF" >> $GITHUB_ENV
+        echo $PR_FORMATTED_BODY >> $GITHUB_ENV
+        echo "" >> $GITHUB_ENV
+        echo "EOF" >> $GITHUB_ENV        
       shell: bash
     - name: Slack Notify
       uses: rtCamp/action-slack-notify@v2
