--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -22,9 +22,9 @@ jobs:
       working-directory: .github/workflows/changelog/
       # Multiline strings from: https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions
       run: |
-        body = ${{ github.event.pull_request.body }}
-        body = ${ body//'"'/'' }
-        python3 save_formated_pr_body.py "$body"> result.txt
+        body=${{ github.event.pull_request.body }}
+        body="${body//'\"'/''}"
+        python3 save_formated_pr_body.py $body > result.txt
         PR_FORMATTED_BODY=$(cat result.txt)
         echo "PR_FORMATTED_BODY<<EOF" >> $GITHUB_ENV
         echo "$PR_FORMATTED_BODY" >> $GITHUB_ENV
