--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -23,7 +23,7 @@ jobs:
       # Multiline strings from: https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions
       # ' "  %27 %22
       run: |
-        python3 save_formated_pr_body.py "${${{ github.event.pull_request.body }}//'%27'/"} > result.txt  
+        python3 save_formated_pr_body.py "${${{ github.event.pull_request.body }}//'%27'/''}" > result.txt  
         PR_FORMATTED_BODY=$(cat result.txt)
         echo "PR_FORMATTED_BODY<<EOF" >> $GITHUB_ENV
         echo "$PR_FORMATTED_BODY" >> $GITHUB_ENV
