--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -23,7 +23,7 @@ jobs:
       # Multiline strings from: https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions
       # ' "  %27 %22
       run: |
-        body=${{ github.event.pull_request.body }}
+        body="${{ github.event.pull_request.body }}"
         python3 save_formated_pr_body.py "${body//'%22'/' '}" > result.txt  
         PR_FORMATTED_BODY=$(cat result.txt)
         echo "PR_FORMATTED_BODY<<EOF" >> $GITHUB_ENV
