--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -22,8 +22,10 @@ jobs:
       working-directory: .github/workflows/changelog/
       # Multiline strings from: https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions
       # ' " space %27 %22 %20 
+      env: 
+        BODY: ${{ github.event.pull_request.body }}
       run: |
-        BODY="${${{ github.event.pull_request.body }}//'%'/'%25'}"
+        BODY="${BODY//'%'/'%25'}"
         BODY="${BODY//$'\n'/'%0A'}"
         BODY="${BODY//$'\r'/'%0D'}"  
         BODY="${BODY//$'%22'/'%20'}"
