--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -35,4 +35,4 @@ jobs:
       run: |
           curl -X POST "${{ secrets.SLACK_WEBHOOK }}" \
           --header 'Content-type: application/json; charset=utf-8' \
-          --data '{ "channel": "#changelog", "username": "ghActionsBot", "icon_emoji": ":github:", "text": "Changelog notification for a Nomad software promotion", "message": ${{ env.PR_FORMATTED_BODY }} }' \
+          --data '{ "channel": "#changelog", "username": "ghActionsBot", "icon_emoji": ":github:", "text": "Changelog notification for a Nomad software promotion", "message": "${{ env.PR_FORMATTED_BODY }}"" }' \
