--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -21,7 +21,7 @@ jobs:
     - name: PR Format body
       working-directory: .github/workflows/changelog/
       # Multiline strings from: https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions
-      env: 
+      env:
         BODY: ${{ github.event.pull_request.body }}
       run: |
         python3 save_formated_pr_body.py "$BODY" > result.txt
@@ -32,7 +32,9 @@ jobs:
         echo "EOF" >> $GITHUB_ENV
       shell: bash
     - name: Slack Notify
+      env:
+        MESSAGE: ${{ env.PR_FORMATTED_BODY }}
       run: |
           curl --location --request POST "${{ secrets.SLACK_WEBHOOK }}" \
           --header 'Content-type: application/json; charset=utf-8' \
-          --data '{ "channel": "#changelog", "username": "ghActionsBot", "icon_emoji": ":github:", "text": "Changelog notification for a Nomad software promotion", "blocks": "${{ env.PR_FORMATTED_BODY }}" }' \
+          --data '{ "channel": "#changelog", "username": "ghActionsBot", "icon_emoji": ":github:", "text": "Changelog notification for a Nomad software promotion", "blocks": $BODY }'
