--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -42,5 +42,12 @@ jobs:
           "username": "ghActionsBot",
           "icon_emoji": ":github:",
           "text": "Changelog notification for a Nomad software promotion",
-          "text": "Hello world"
+          "blocks": [
+              {
+              "type": "section",
+              "text": {
+                "type": "mrkdwn",
+                "text": "Danny Torrence left the following review for your property:"
+              }
+            ]
           }'
