--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -42,12 +42,5 @@ jobs:
           "username": "ghActionsBot",
           "icon_emoji": ":github:",
           "text": "Changelog notification for a Nomad software promotion",
-          "blocks": [
-          {
-          "type": "section",
-          "text": {
-          "type": "mrkdwn",
-          "text": "Danny Torrence left the following review for your property:"
-          }
-          ]
+          "blocks": [{"type": "section", "text": {"type": "mrkdwn", "text": "Danny Torrence left the following review for your property:"}]
           }'
