--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -34,6 +34,7 @@ jobs:
     - name: Slack Notify
       env:
         MESSAGE: ${{ env.PR_FORMATTED_BODY }}
+        BLOCKS: '[{"type": "section", "text": {"type": "mrkdwn", "text": "Danny Torrence left the following review for your property:"}]'
       run: |
           curl --location --request POST "${{ secrets.SLACK_WEBHOOK }}" \
           --header 'Content-type: application/json; charset=utf-8' \
@@ -42,5 +43,5 @@ jobs:
           "username": "ghActionsBot",
           "icon_emoji": ":github:",
           "text": "Changelog notification for a Nomad software promotion",
-          "blocks": %27[{"type": "section", "text": {"type": "mrkdwn", "text": "Danny Torrence left the following review for your property:"}]%27
+          "blocks": $BLOCKS
           }'
