--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -43,5 +43,5 @@ jobs:
           "username": "ghActionsBot",
           "icon_emoji": ":github:",
           "text": "Changelog notification for a Nomad software promotion",
-          "blocks": $BLOCKS
+          "blocks": "$BLOCKS"
           }'
