--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -35,6 +35,7 @@ jobs:
       env:
         MESSAGE: ${{ env.PR_FORMATTED_BODY }}
         BLOCKS: '[{"type": "section", "text": {"type": "mrkdwn", "text": "Danny Torrence left the following review for your property:"}]'
+        TITLE: "Changelog notification for a Nomad software promotion ***"
       run: |
           curl --location --request POST "${{ secrets.SLACK_WEBHOOK }}" \
           --header 'Content-type: application/json; charset=utf-8' \
@@ -42,6 +43,6 @@ jobs:
           "channel": "#githubchangelog",
           "username": "ghActionsBot",
           "icon_emoji": ":github:",
-          "text": "Changelog notification for a Nomad software promotion",
-          "blocks": "$BLOCKS"
+          "text": "$TITLE",
           }'
+#          "blocks": "$BLOCKS"
