--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -43,6 +43,6 @@ jobs:
           "channel": "#githubchangelog",
           "username": "ghActionsBot",
           "icon_emoji": ":github:",
-          "text": "$TITLE",
+          "text": $TITLE,
           }'
 #          "blocks": "$BLOCKS"
