--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -39,10 +39,10 @@ jobs:
       run: |
           curl --location --request POST "${{ secrets.SLACK_WEBHOOK }}" \
           --header 'Content-type: application/json; charset=utf-8' \
-          --data '{
-          "channel": "#githubchangelog",
-          "username": "ghActionsBot",
-          "icon_emoji": ":github:",
-          "text": $TITLE,
-          }'
+          --data "{
+          'channel': '#githubchangelog',
+          'username': 'ghActionsBot',
+          'icon_emoji': '':github:'',
+          'text': $TITLE,
+          }"
 #          "blocks": "$BLOCKS"
