--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Checkout source code
       uses: actions/checkout@v3
     - name: PR Format body
+      shell: bash
       working-directory: .github/workflows/changelog/
       # Multiline strings from: https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions
       env:
@@ -30,14 +31,15 @@ jobs:
         echo "$PR_FORMATTED_BODY" >> $GITHUB_ENV
         echo "" >> $GITHUB_ENV
         echo "EOF" >> $GITHUB_ENV
-      shell: bash
     - name: Slack Notify
+      shell: bash
       env:
         MESSAGE: ${{ env.PR_FORMATTED_BODY }}
         BLOCKS: '[{"type": "section", "text": {"type": "mrkdwn", "text": "Danny Torrence left the following review for your property:"}]'
         TITLE: "Changelog notification for a Nomad software promotion ***"
       run: |
+          data = "channel": "#githubchangelog", "username": "ghActionsBot", "icon_emoji": ":github:", "text": "$TITLE"
           curl --location --request POST "${{ secrets.SLACK_WEBHOOK }}" \
           --header 'Content-type: application/json; charset=utf-8' \
-          --data '${{ format('{{ ''channel'': ''#githubchangelog'', ''username'': ''ghActionsBot'', ''icon_emoji'': '':github:'', ''text'': {0} }}', env.TITLE) }}'
+          --data "{$data}"
 #          "blocks": "$BLOCKS"
