--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -38,7 +38,7 @@ jobs:
         BLOCKS: '[{"type": "section", "text": {"type": "mrkdwn", "text": "Danny Torrence left the following review for your property:"}]'
         TITLE: "Changelog notification for a Nomad software promotion ***"
       run: |
-          data='"channel": "#githubchangelog", "username": "ghActionsBot", "icon_emoji": ":github:", "text": "$TITLE"'
+          data='"channel": "#githubchangelog", "username": "ghActionsBot", "icon_emoji": ":github:", "text": "${{ echo $TITLE }}"'
           curl --location --request POST "${{ secrets.SLACK_WEBHOOK }}" \
           --header 'Content-type: application/json; charset=utf-8' \
           --data "{$data}"
