--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -35,7 +35,7 @@ jobs:
       shell: bash
       env:
         MESSAGE: ${{ env.PR_FORMATTED_BODY }}
-        BLOCKS: '[{"type": "section", "text": {"type": "mrkdwn", "text": "Danny Torrence left the following review for your property:"}]'
+        BLOCKS: "[{\"type\": \"section\", \"text\": {\"type\": \"mrkdwn\", \"text\": \"Danny Torrence left the following review for your property:\"}]"
         TITLE: "Changelog notification for a Nomad software promotion"
       run: |
           curl --location --request POST "${{ secrets.SLACK_WEBHOOK }}" \
