--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -35,9 +35,8 @@ jobs:
       shell: bash
       env:
         BLOCKS: ${{ env.PR_FORMATTED_BODY }}
-        MESSAGE: "[{\"type\": \"section\", \"text\": {\"type\": \"mrkdwn\", \"text\": \"• Danny Torrence left the following review for your property:\"}}]"
         TITLE: "Changelog notification for a Nomad software promotion"
       run: |
           curl --location --request POST "${{ secrets.SLACK_WEBHOOK }}" \
           --header 'Content-type: application/json; charset=utf-8' \
-          --data "{\"channel\": \"#changelog\", \"username\": \"ghActionsBot\", \"icon_emoji\": \":github:\", "text": \"$TITLE\", "blocks":$BLOCKS}"
+          --data "{\"channel\": \"#changelog\", \"username\": \"ghActionsBot\", \"icon_emoji\": \":github:\", "text": \"$TITLE\", "blocks":\"$BLOCKS\"}"
