--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -39,4 +39,4 @@ jobs:
       run: |
           curl --location --request POST "${{ secrets.SLACK_WEBHOOK }}" \
           --header 'Content-type: application/json; charset=utf-8' \
-          --data "{\"channel\": \"#changelog\", \"username\": \"ghActionsBot\", \"icon_emoji\": \":github:\", "text": \"$TITLE\", "blocks":\"$BLOCKS\"}"
+          --data "{\"channel\": \"#changelog\", \"username\": \"ghActionsBot\", \"icon_emoji\": \":github:\", "text":$TITLE, "blocks":$BLOCKS}"
