--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -38,5 +38,5 @@ jobs:
         TITLE: "Changelog notification for a Nomad software promotion"
       run: |
           curl --location --request POST "${{ secrets.SLACK_WEBHOOK }}" \
-          --header 'Content-type: application/json; charset=utf-8' \
+          --header 'Content-type: application/json' \
           --data "{\"channel\": \"#changelog\", \"username\": \"ghActionsBot\", \"icon_emoji\": \":github:\", "text": \"$TITLE\", "blocks": $BLOCKS}"
