--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -25,7 +25,7 @@ jobs:
       env:
         BODY: ${{ github.event.pull_request.body }}
       run: |
-        github_params="{"\"actor\": $GITHUB_ACTOR, \"repo\": $GITHUB_REPOSITORY, \"ref\": $GITHUB_BASE_REF, \"commit\": $GITHUB_HEAD_REF}"
+        github_params="{\"actor\": $GITHUB_ACTOR, \"repo\": $GITHUB_REPOSITORY, \"ref\": $GITHUB_BASE_REF, \"commit\": $GITHUB_HEAD_REF}"
         python3 save_formated_pr_body.py "$BODY" "$github_params"> result.txt
         PR_FORMATTED_BODY=$(cat result.txt)
         echo "PR_FORMATTED_BODY<<EOF" >> $GITHUB_ENV
